# veery

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  config.yaml  install.sh  macos_app.py  pyproject.toml  setup.py
benchmark/: script.txt
design/: streaming-dictation.md
docs/: AVATAR_AND_OFFER.md  COMPETITIVE_ANALYSIS.md  DESIGN.md  DESIGN_FINAL.md  JARGON_STRATEGY.md
jargon/: claude_code.yaml  learned.yaml  quant_finance.yaml  tech.yaml
jargon/community/: ai_ml.yaml  devops_cloud.yaml  frontend.yaml
scripts/: install_app.sh  optimize.py
src/veery/: __init__.py  app.py  audio.py  config.py  corrector.py  evaluate.py  history.py  jargon.py  learner.py  miner.py  output.py  overlay.py  sounds.py  stt.py
src/voiceflow/: __init__.py  app.py  audio.py  config.py  corrector.py  grammar.py  jargon.py  learner.py  miner.py  output.py  overlay.py  sounds.py  stt.py
tests/: test_app.py  test_audio.py  test_claude_commands.py  test_corrector.py  test_evaluate.py  test_integration.py  test_jargon.py  test_jargon_phonetic.py  test_learner.py  test_macos_app.py  test_miner.py  test_output.py  test_overlay.py  test_streaming.py  test_stt.py
